--- a/src/Archmage/GameBundle/Resources/views/Account/message.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/message.html.twig
@@ -9,7 +9,7 @@
             <div class="page-header text-center">
                 <h1><i class="fa fa-fw fa-envelope"></i>Mensajes
                 {% if message is defined %}
-                    <br><small>{{ message.subject|truncate(20) }}</small>
+                    <br><small class="text-responsive">{{ message.datetime|date('d/m/Y H:i:s') }} - {{ message.subject|truncate(20) }}</small>
                 {% endif %}
                 </h1>
             </div>
@@ -35,10 +35,11 @@
             {# show message #}
             {% else %}
                 {% for i in 0..text['content']|length - 1 %}
-            <div class="col-xs-12 col-md-{{ text['content'][i]['length'] }} col-md-offset-{{ text['content'][i]['offset'] }} alert alert-{{ text['content'][i]['class'] }} text-{{ text['content'][i]['align'] }} text-responsive" role="alert">
+            <div class="col-xs-12 col-md-{{ text['content'][i]['length'] }} col-md-offset-{{ text['content'][i]['offset'] }} alert alert-{{ text['content'][i]['class'] }} ribbon text-{{ text['content'][i]['align'] }} text-responsive" role="alert">
                 <i class="fa fa-fw fa-exclamation-triangle"></i>{{ text['content'][i]['text'] }}
             </div>
                 {% endfor %}
+            {#
             <div class="col-xs-12 col-md-6 col-md-offset-3">
                 <div class="btn-group btn-group-justified" role="group" aria-label="...">
                     <a href="{{ path('archmage_game_account_message') }}" class="btn btn-default"><i class="fa fa-fw fa-arrow-left"></i><span class="hidden-xs">Volver</span></a>
@@ -46,6 +47,7 @@
                     <a href="{{ path('archmage_game_account_message') }}" class="btn btn-default"><i class="fa fa-fw fa-trash"></i><span class="hidden-xs">Borrar</span></a>
                 </div>
             </div>
+            #}
             {% endif %}
         </div>
     </div>
