--- a/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
@@ -7,7 +7,10 @@
     <div class="row">
         <div class="col-md-offset-3 col-md-6 col-xs-12">
             <div class="page-header text-center">
-                <h1><i class="fa fa-fw fa-money"></i>Recaudar oro<br><small><i class="fa fa-fw fa-hourglass"></i>{{ player.turns|nf }}</small></h1>
+                <h1><i class="fa fa-fw fa-money"></i>Recaudar oro
+                    <br>
+                    {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
+                </h1>
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading text-center">{{ (player.goldResourcePerTurn * 2)|nf }} Oro por turno</div>
@@ -17,7 +20,7 @@
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/economy.jpg') }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12">Aquí puedes aplicar impuestos desorbitados a tus leales súbditos para obtener grandes cantidades de <span class="label label-extra">Oro</span> rápidamente.</div>
+                            <div class="col-xs-12">Aquí puedes gastar <span class="label label-extra">Turnos</span> y aplicar impuestos desorbitados a tus leales súbditos para obtener grandes cantidades de <span class="label label-extra">Oro</span> rápidamente.</div>
                         </div>
                     </div>
                 </div>
