--- a/src/Archmage/GameBundle/Resources/views/Magic/dispell.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/dispell.html.twig
@@ -7,7 +7,10 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="page-header text-center">
-                <h1><i class="fa fa-fw fa-chain-broken"></i>Desencantar<br><small><i class="fa fa-fw fa-hourglass"></i>{{ player.turns|nf }}</small></h1>
+                <h1><i class="fa fa-fw fa-chain-broken"></i>Desencantar
+                    <br>
+                    {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
+                </h1>
             </div>
         </div>
         {% for enchantment in player.enchantments %}
@@ -42,7 +45,7 @@
         {% endfor %}
         {% if player.enchantments is empty and player.curses is empty %}
         <div class="container">
-            <div class="col-xs-12 alert alert-danger text-center" role="alert">
+            <div class="col-xs-12 alert alert-danger ribbon text-responsive text-center" role="alert">
                 <i class="fa fa-fw fa-exclamation-triangle"></i> Actualmente no tienes encantamientos en tu reino, amigos o enemigos. Tal vez deberías <i class="fa fa-fw fa-graduation-cap"></i><a href="{{ path('archmage_game_magic_research') }}">Investigar</a> algunos.
             </div>
         </div>
