--- a/src/Archmage/GameBundle/Resources/views/Territory/demolish.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/demolish.html.twig
@@ -7,11 +7,14 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="page-header text-center">
-                <h1><i class="fa fa-fw fa-bomb"></i>Demoler<br><small><i class="fa fa-fw fa-hourglass"></i>{{ player.turns|nf }}</small></h1>
+                <h1><i class="fa fa-fw fa-bomb"></i>Demoler
+                    <br>
+                    {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
+                </h1>
             </div>
         </div>
         {% for construction in player.constructions %}
-            {% if construction.building.name == 'Tierras' %}
+            {% if loop.first %}
         <div class="col-xs-12 col-md-offset-3 col-md-6">
             {% else %}
         <div class="col-xs-12 col-md-6">
@@ -23,28 +26,28 @@
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset( construction.building.image ) }}">
                         </div>
-                        {% if construction.building.name == 'Tierras' %}
+                        {% if loop.first %}
                         <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12">Aquí puedes destruir tus estructuras para recuperar <span class="label label-extra">Tierras</span> y reutilizarlas en otros edificios.</div>
+                            <div class="col-xs-12">Aquí puedes invertir 1 <span class="label label-extra">Turno</span> en destruir tus estructuras para recuperar <span class="label label-extra">Tierras</span>. Las cifras muestran coste de construcción, recurso proporcionado por turno, mantenimiento por turno, y aumento de recurso máximo.</div>
                         </div>
                         {% else %}
                         <div class="col-xs-8 text-padded">
                             {# row #}
-                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ construction.building.goldCost|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ construction.building.peopleCost|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ construction.building.manaCost|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>-{{ construction.building.goldCost|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>-{{ construction.building.peopleCost|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>-{{ construction.building.manaCost|nf }}</div>
                             {# row #}
-                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ construction.building.goldMaintenance|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ construction.building.peopleMaintenance|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ construction.building.manaMaintenance|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>+{{ construction.building.goldResource|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>+{{ construction.building.peopleResource|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>+{{ construction.building.manaResource|nf }}</div>
                             {# row #}
-                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ construction.building.goldResource|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ construction.building.peopleResource|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ construction.building.manaResource|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>-{{ construction.building.goldMaintenance|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>-{{ construction.building.peopleMaintenance|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>-{{ construction.building.manaMaintenance|nf }}</div>
                             {# row #}
-                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ construction.building.goldCap|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ construction.building.peopleCap|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ construction.building.manaCap|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>+{{ construction.building.goldCap|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>+{{ construction.building.peopleCap|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>+{{ construction.building.manaCap|nf }}</div>
                             {# row #}
                             <div class="col-xs-12 text-lore"><small><i>"{{ construction.building.lore }}"</i></small></div>
                         </div>
@@ -57,10 +60,10 @@
                         <div class="form-group has-feedback">
                             <div class="input-group">
                                 <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-default" {% if construction.building.name == 'Tierras' or construction.quantity <= 0 %}disabled{% endif %}><i class="fa fa-fw fa-bomb"></i><span class="hidden-xs">Demoler</span></button>
+                                    <button type="submit" class="btn btn-default" {% if construction.quantity <= 0 %}disabled{% endif %}><i class="fa fa-fw fa-bomb"></i><span class="hidden-xs">Demoler</span></button>
                                 </div>
-                                <input type="number" class="form-control" id="lands" name="lands" min="1" max="{{ construction.quantity }}" value="0" {% if construction.building.name == 'Tierras' or construction.quantity <= 0 %}disabled{% endif %} required />
-                                <input type="hidden" id="construction" name="construction" value="{{ construction.id }}" {% if construction.building.name == 'Tierras' or construction.quantity <= 0 %}disabled{% endif %} required />
+                                <input type="number" class="form-control" id="lands" name="lands" min="1" max="{{ construction.quantity }}" value="0" {% if construction.quantity <= 0 %}disabled{% endif %} required />
+                                <input type="hidden" id="construction" name="construction" value="{{ construction.id }}" {% if construction.quantity <= 0 %}disabled{% endif %} required />
                                 <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                             </div>
                         </div>
