--- a/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
@@ -7,17 +7,20 @@
     <div class="row">
         <div class="col-md-offset-3 col-md-6 col-xs-12">
             <div class="page-header text-center">
-                <h1><i class="fa fa-fw fa-map"></i>Explorar<br><small><i class="fa fa-fw fa-hourglass"></i>{{ player.turns|nf }}</small></h1>
+                <h1><i class="fa fa-fw fa-map"></i>Explorar
+                    <br>
+                    {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
+                </h1>
             </div>
             <div class="panel panel-default">
-                <div class="panel-heading text-center">{{ player.lands|nf }} Acres</div>
+                <div class="panel-heading text-center">{{ player.lands|nf }} Tierras</div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/territory.jpg') }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12">Aquí puedes encontrar más <span class="label label-extra">Tierras</span> libres que añadir a tu reino para construir edificios, hasta un límite de {{ 3500|nf }} <span class="label label-extra">Acres</span>.</div>
+                            <div class="col-xs-12">Aquí puedes gastar <span class="label label-extra">Turnos</span> y encontrar más <span class="label label-extra">Tierras</span> libres que añadir a tu reino para construir edificios. Cuantas menos tierras tengas, más encontrarás al explorar, y viceversa, hasta las {{ 3500|nf }}.</div>
                         </div>
                     </div>
                 </div>
@@ -25,7 +28,7 @@
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-12 text-center text-only">
-                            TIERRAS<sub>exploradas</sub> = ({{ 3500|nf }} - ACRES<sub>jugador</sub> + 333) / 333
+                            TIERRAS<sub>exploradas</sub> = ({{ 3500|nf }} - TIERRAS<sub>jugador</sub> + 333) / 333
                         </div>
                     </div>
                 </div>
