--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -166,7 +166,7 @@
                     </div>
                 </div>
                 <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                    <a href="{{ path('archmage_game_kingdom_auction') }}" class="btn btn-default"><i class="fa fa-fw fa-user-secret"></i><span class="hidden-xs">Contratar</span></a>
+                    <a href="{{ path('archmage_game_kingdom_auction') }}" class="btn btn-default"><i class="fa fa-fw fa-user-secret"></i><span class="hidden-xs">Contratar héroes</span></a>
                 </div>
             </div>
         </div>
@@ -188,7 +188,7 @@
                 </div>
                 <div class="btn-group btn-group-justified" role="group" aria-label="...">
                     <a href="{{ path('archmage_game_magic_conjure') }}" class="btn btn-default"><i class="fa fa-fw fa-magic"></i><span class="hidden-xs">Hechizos</span></a>
-                    <a href="{{ path('archmage_game_magic_artifact') }}" class="btn btn-default"><i class="fa fa-fw fa-joomla"></i><span class="hidden-xs">Artefactos</span></a>
+                    <a href="{{ path('archmage_game_magic_artifact') }}" class="btn btn-default"><i class="fa fa-fw fa-diamond"></i><span class="hidden-xs">Artefactos</span></a>
                 </div>
             </div>
         </div>
