--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -32,6 +32,12 @@
     {# block flashbag messages #}
     {% block flashbag %}
     <div class="container">
+        {% if error is defined and error %}
+        <div class="col-xs-12 alert alert-danger alert-dismissible ribbon text-center text-responsive" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="close"><i class="fa fa-fw fa-times-circle"></i></button>
+            <i class="fa fa-fw fa-exclamation-triangle"></i>{{ error.messageKey|trans(error.messageData, 'login') }}
+        </div>
+        {% endif %}
         {% for type, flashMessages in app.session.flashbag.all() %}
             {% for flashMessage in flashMessages %}
         <div class="col-xs-12 alert alert-{{ type }} alert-dismissible ribbon text-center text-responsive" role="alert">
