--- a/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
@@ -5,46 +5,50 @@
 {% block body %}
 <div class="container">
     <div class="row">
-        <div class="col-md-offset-3 col-md-6 col-xs-12">
+        <div class="col-xs-12">
             <div class="page-header text-center">
                 <h1><i class="fa fa-fw fa-money"></i>Recaudar oro
                     <br>
                     {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
                 </h1>
             </div>
-            <div class="panel panel-default">
-                <div class="panel-heading text-center">{{ (player.goldResourcePerTurn * 2)|nf }} Oro por turno</div>
-                <div class="panel-body text-responsive">
-                    <div class="row">
-                        <div class="col-xs-4">
-                            <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/economy.jpg') }}">
-                        </div>
-                        <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12">Aquí puedes gastar <span class="label label-extra">Turnos</span> y aplicar impuestos desorbitados a tus leales súbditos para obtener grandes cantidades de <span class="label label-extra">Oro</span> rápidamente.</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="panel-middle text-center">Fórmula</div>
-                <div class="panel-body text-responsive">
-                    <div class="row">
-                        <div class="col-xs-12 text-center text-only">
-                            ORO<sub>recaudado</sub> = ORO<sub>granjas</sub> * GRANJAS<sub>jugador</sub> * 2
-                        </div>
-                    </div>
-                </div>
-                <div class="panel-footer text-center">
-                    <form id="tax" name="tax" class="form-inline" data-toggle="validator" action="{{ path('archmage_game_kingdom_tax') }}" method="post" role="form">
-                        <div class="form-group has-feedback">
-                            <div class="input-group">
-                                <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-hourglass-half"></i><span class="hidden-xs">Recaudar</span></button>
+            <div class="row">
+                <div class="col-xs-12 col-md-offset-3 col-md-6">
+                    <div class="panel panel-default">
+                        <div class="panel-heading text-center">{{ (player.goldResourcePerTurn * 2)|nf }} Oro por turno</div>
+                        <div class="panel-body text-responsive">
+                            <div class="row">
+                                <div class="col-xs-4">
+                                    <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/economy.jpg') }}">
                                 </div>
-                                <input type="number" class="form-control" id="turns" name="turns" min="1" max="{{ player.turns }}" value="0" required/>
-                                <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                                <div class="col-xs-8 text-padded">
+                                    <div class="col-xs-12">Aquí puedes gastar <span class="label label-extra">Turnos</span> y aplicar impuestos desorbitados a tus leales súbditos para obtener grandes cantidades de <span class="label label-extra">Oro</span> rápidamente.</div>
+                                </div>
                             </div>
                         </div>
-                        <input type="hidden" name="_csrf_token" value="{{ csrf_token('tax') }}">
-                    </form>
+                        <div class="panel-middle text-center">Fórmula</div>
+                        <div class="panel-body text-responsive">
+                            <div class="row">
+                                <div class="col-xs-12 text-center text-only">
+                                    ORO<sub>recaudado</sub> = ORO<sub>granjas</sub> * GRANJAS<sub>jugador</sub> * 2
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel-footer text-center">
+                            <form id="tax" name="tax" class="form-inline" data-toggle="validator" action="{{ path('archmage_game_kingdom_tax') }}" method="post" role="form">
+                                <div class="form-group has-feedback">
+                                    <div class="input-group">
+                                        <div class="input-group-btn">
+                                            <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-hourglass-half"></i><span class="hidden-xs">Recaudar</span></button>
+                                        </div>
+                                        <input type="number" class="form-control" id="turns" name="turns" min="1" max="{{ player.turns }}" value="0" required/>
+                                        <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                                    </div>
+                                </div>
+                                <input type="hidden" name="_csrf_token" value="{{ csrf_token('tax') }}">
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
