--- a/src/Archmage/GameBundle/Resources/views/Magic/charge.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/charge.html.twig
@@ -5,45 +5,49 @@
 {% block body %}
 <div class="container">
     <div class="row">
-        <div class="col-md-offset-3 col-md-6 col-xs-12">
+        <div class="col-xs-12">
             <div class="page-header text-center">
                 <h1><i class="fa fa-fw fa-tint"></i>Cargar maná
                     <br>
                     {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
                 </h1>
             </div>
-            <div class="panel panel-default">
-                <div class="panel-heading text-center">{{ player.mana|nf }} / {{ player.manaCap|nf }} Maná en tu reino</div>
-                <div class="panel-body text-responsive">
-                    <div class="row">
-                        <div class="col-xs-4">
-                            <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/magic.jpg') }}">
-                        </div>
-                        <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12">Aquí puedes gastar <span class="label label-extra">Turnos</span> y recargar tus reservas de <span class="label label-extra">Maná</span> para lanzar los hechizos más caros y poderosos o pagar mantenimientos de unidades, edificios, héroes y encantamientos.</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="panel-middle text-center">Fórmula</div>
-                <div class="panel-body text-responsive">
-                    <div class="row">
-                        <div class="col-xs-12 text-center text-only">
-                            MANA<sub>cargado</sub> = MANA<sub>nodos</sub> * NODOS<sub>jugador</sub> * 2
-                        </div>
-                    </div>
-                </div>
-                <div class="panel-footer text-center">
-                    <form class="form-inline" data-toggle="validator" action="{{ path('archmage_game_magic_charge') }}" method="post">
-                        <div class="form-group has-feedback">
-                            <div class="input-group">
-                                <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-hourglass-half"></i><span class="hidden-xs">Cargar</span></button>
+            <div class="row">
+                <div class="col-xs-12 col-md-offset-3 col-md-6">
+                    <div class="panel panel-default">
+                        <div class="panel-heading text-center">{{ player.mana|nf }} / {{ player.manaCap|nf }} Maná en tu reino</div>
+                        <div class="panel-body text-responsive">
+                            <div class="row">
+                                <div class="col-xs-4">
+                                    <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/magic.jpg') }}">
                                 </div>
-                                <input type="number" class="form-control" id="turns" name="turns" min="1" max="{{ player.turns }}" value="0" required/>
-                                <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                                <div class="col-xs-8 text-padded">
+                                    <div class="col-xs-12">Aquí puedes gastar <span class="label label-extra">Turnos</span> y recargar tus reservas de <span class="label label-extra">Maná</span> para lanzar los hechizos más caros y poderosos o pagar mantenimientos de unidades, edificios, héroes y encantamientos.</div>
+                                </div>
                             </div>
                         </div>
-                    </form>
+                        <div class="panel-middle text-center">Fórmula</div>
+                        <div class="panel-body text-responsive">
+                            <div class="row">
+                                <div class="col-xs-12 text-center text-only">
+                                    MANA<sub>cargado</sub> = MANA<sub>nodos</sub> * NODOS<sub>jugador</sub> * 2
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel-footer text-center">
+                            <form class="form-inline" data-toggle="validator" action="{{ path('archmage_game_magic_charge') }}" method="post">
+                                <div class="form-group has-feedback">
+                                    <div class="input-group">
+                                        <div class="input-group-btn">
+                                            <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-hourglass-half"></i><span class="hidden-xs">Cargar</span></button>
+                                        </div>
+                                        <input type="number" class="form-control" id="turns" name="turns" min="1" max="{{ player.turns }}" value="0" required/>
+                                        <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
