--- a/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
@@ -5,45 +5,49 @@
 {% block body %}
 <div class="container">
     <div class="row">
-        <div class="col-md-offset-3 col-md-6 col-xs-12">
+        <div class="col-xs-12">
             <div class="page-header text-center">
                 <h1><i class="fa fa-fw fa-map"></i>Explorar
                     <br>
                     {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
                 </h1>
             </div>
-            <div class="panel panel-default">
-                <div class="panel-heading text-center">{{ player.lands|nf }} Tierras</div>
-                <div class="panel-body text-responsive">
-                    <div class="row">
-                        <div class="col-xs-4">
-                            <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/territory.jpg') }}">
-                        </div>
-                        <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12">Aquí puedes gastar <span class="label label-extra">Turnos</span> y encontrar más <span class="label label-extra">Tierras</span> libres que añadir a tu reino para construir edificios. Cuantas menos tierras tengas, más encontrarás al explorar, y viceversa, hasta las {{ 3500|nf }}.</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="panel-middle text-center">Fórmula</div>
-                <div class="panel-body text-responsive">
-                    <div class="row">
-                        <div class="col-xs-12 text-center text-only">
-                            TIERRAS<sub>exploradas</sub> = ({{ 3500|nf }} - TIERRAS<sub>jugador</sub> + 333) / 333
-                        </div>
-                    </div>
-                </div>
-                <div class="panel-footer text-center">
-                    <form class="form-inline" data-toggle="validator" action="{{ path('archmage_game_territory_explore') }}" method="post" role="form">
-                        <div class="form-group has-feedback">
-                            <div class="input-group">
-                                <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-hourglass-half"></i><span class="hidden-xs">Explorar</span></button>
+            <div class="row">
+                <div class="col-xs-12 col-md-offset-3 col-md-6">
+                    <div class="panel panel-default">
+                        <div class="panel-heading text-center">{{ player.lands|nf }} Tierras</div>
+                        <div class="panel-body text-responsive">
+                            <div class="row">
+                                <div class="col-xs-4">
+                                    <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/territory.jpg') }}">
                                 </div>
-                                <input type="number" class="form-control" id="turns" name="turns" min="1" max="{{ player.turns }}" value="0" required/>
-                                <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                                <div class="col-xs-8 text-padded">
+                                    <div class="col-xs-12">Aquí puedes gastar <span class="label label-extra">Turnos</span> y encontrar más <span class="label label-extra">Tierras</span> libres que añadir a tu reino para construir edificios. Cuantas menos tierras tengas, más encontrarás al explorar, y viceversa, hasta las {{ 3500|nf }}.</div>
+                                </div>
                             </div>
                         </div>
-                    </form>
+                        <div class="panel-middle text-center">Fórmula</div>
+                        <div class="panel-body text-responsive">
+                            <div class="row">
+                                <div class="col-xs-12 text-center text-only">
+                                    TIERRAS<sub>exploradas</sub> = ({{ 3500|nf }} - TIERRAS<sub>jugador</sub> + 333) / 333
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel-footer text-center">
+                            <form class="form-inline" data-toggle="validator" action="{{ path('archmage_game_territory_explore') }}" method="post" role="form">
+                                <div class="form-group has-feedback">
+                                    <div class="input-group">
+                                        <div class="input-group-btn">
+                                            <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-hourglass-half"></i><span class="hidden-xs">Explorar</span></button>
+                                        </div>
+                                        <input type="number" class="form-control" id="turns" name="turns" min="1" max="{{ player.turns }}" value="0" required/>
+                                        <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
