--- a/src/Archmage/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Archmage/UserBundle/Resources/views/Security/login.html.twig
@@ -1,19 +1,58 @@
-<form action="{{ path("fos_user_security_check") }}" method="post">
-    <div id="error">&nbsp;
-        {% if error %}
-            Nombre de usuario o contraseña incorrectos
-        {% endif %}
+{% extends "ArchmageUserBundle::layout.html.twig" %}
+
+{% block title %}Bienvenid@{% endblock %}
+
+{% block fos_user_content %}
+<div class="container">
+    <div class="jumbotron text-center">
+        <h1>Arch<i class="fa fa-fw fa-eye"></i>Mage</h1>
+        <h3>- BETA -</h3>
+        <form id="login" name="login" class="form-signin" data-toggle="validator" action="{{ path("fos_user_security_check") }}" method="post" {{ form_enctype(form) }}>
+            <input type="text" id="username" name="_username" class="form-control" placeholder="Usuario" value="{% if last_username is defined %}{{ last_username }}{% endif %}" required />
+            <input type="password" id="password" name=_password" class="form-control" placeholder="Contraseña" required />
+            <button type="submit" id="submit" name="_submit" class="btn btn-lg btn-default btn-block"><i class="fa fa-fw fa-lg fa-sign-in"></i>Entrar</button>
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token('login') }}" />
+        </form>
+        <a href="{{ path('fos_user_registration_register') }}">Registro</a> - <a href="{{ path('fos_user_resetting_request') }}">Password</a> - <a href="{{ path('archmage_game_home_help') }}">Ayuda</a>
+        <br/>
+        <br/>
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-2">
+                <a href="{{ path( 'archmage_game_home_help' ) }}#{{ 'Caos'|slug }}" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/doom.jpg') }}"/></a>
+                <div class="caption hidden-xs hidden-sm text-danger">
+                    <h3>Caos</h3>
+                    <small>Sangre y Fuego</small>
+                </div>
+            </div>
+            <div class="col-xs-2">
+                <a href="{{ path( 'archmage_game_home_help' ) }}#{{ 'Fantasmal'|slug }}" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/ghost.jpg') }}"/></a>
+                <div class="caption hidden-xs hidden-sm text-info">
+                    <h3>Fantasmal</h3>
+                    <small>Mente y Espíritu</small>
+                </div>
+            </div>
+            <div class="col-xs-2">
+                <a href="{{ path( 'archmage_game_home_help' ) }}#{{ 'Naturaleza'|slug }}" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/nature.jpg') }}"/></a>
+                <div class="caption hidden-xs hidden-sm text-success">
+                    <h3>Naturaleza</h3>
+                    <small>Roca y Tierra</small>
+                </div>
+            </div>
+            <div class="col-xs-2">
+                <a href="{{ path( 'archmage_game_home_help' ) }}#{{ 'Oscuridad'|slug }}" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/darkness.jpg') }}"/></a>
+                <div class="caption hidden-xs hidden-sm text-warning">
+                    <h3>Oscuridad</h3>
+                    <small>Polvo y Hueso</small>
+                </div>
+            </div>
+            <div class="col-xs-2">
+                <a href="{{ path( 'archmage_game_home_help' ) }}#{{ 'Sagrado'|slug }}" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/holy.jpg') }}"/></a>
+                <div class="caption hidden-xs hidden-sm text-primary">
+                    <h3>Sagrado</h3>
+                    <small>Luz y Gloria</small>
+                </div>
+            </div>
+        </div>
     </div>
-    <div id="userpass">
-        <div class="form-item" id="edit-name-wrapper">
-            <div class="text-question"><span style="width:100px;display:block;float:left;"><label id="label_user" for="username">Usuario:</label></span><input class="text-field" type="text" maxlength="60" name="_username" id="username" size="20" tabindex="1" value="{{ last_username }}" /> @unileon.es</div>
-        </div>
-        <div class="form-item" id="edit-pass-wrapper">
-            <div class="text-question"><span style="width:100px;display:block;float:left;"><label id="label_pass" for="password">Contraseña:</label></span><input class="text-field" type="password" name="_password" id="password" maxlength="128" size="20" tabindex="2" class="form-text required" /></div>
-        </div>
-        <div class="login-box">
-            <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-            <input id="submit_ok" type="submit" value="Iniciar sesión" name="Login" />
-        </div>
-    </div>
-</form>
+</div>
+{% endblock %}
