--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -14,7 +14,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading text-center">Objetivo</div>
                 <div class="panel-body text-responsive text-only">
-                    Información acerca del objetivo del juego.
+                    <p>Información acerca del objetivo del juego.</p>
                 </div>
             </div>
         </div>
@@ -28,7 +28,7 @@
                             <img class="factions" src="{{ asset('bundles/archmagegame/images/factions.png') }}">
                             <div class="caption">
                                 <h2>Bonus de facción</h2>
-                                Cada facción tiene una opuesta y aumentará su daño en combate un 25% contra ella. Así, si un <span class="label label-danger">Caos</span> atacase a un <span class="label label-primary">Sagrado</span> u <span class="label label-warning">Oscuridad</span>, su bonus sería del 0%; si atacase a un <span class="label label-success">Naturaleza</span> o <span class="label label-default">Neutral</span>, del +25%; y si atacase a un <span class="label label-info">Fantasmal</span>, -25%.
+                                <p>Cada facción tiene una opuesta y aumentará su daño en combate un 25% contra ella. Así, si un <span class="label label-danger">Caos</span> atacase a un <span class="label label-primary">Sagrado</span> u <span class="label label-warning">Oscuridad</span>, su bonus sería del 0%; si atacase a un <span class="label label-success">Naturaleza</span> o <span class="label label-default">Neutral</span>, del +25%; y si atacase a un <span class="label label-info">Fantasmal</span>, -25%.</p>
                             </div>
                         </div>
                         {# row #}
@@ -36,7 +36,7 @@
                             <img class="factions" src="{{ asset('bundles/archmagegame/images/units.png') }}">
                             <div class="caption">
                                 <h2>Bonus de unidad</h2>
-                                Cada unidad tiene un tipo opuesto y aumentará su daño en combate un 25% contra ella. Así, si una tropa <span class="label label-extra">Distancia</span> ataca a una <span class="label label-extra">Voladora</span>, tendrá un bonus del 25% adicional, pero si ataca a cualquier otra, no tendrá bonificación.
+                                <p>Cada unidad tiene un tipo opuesto y aumentará su daño en combate un 25% contra ella. Así, si una tropa <span class="label label-extra">Distancia</span> ataca a una <span class="label label-extra">Voladora</span>, tendrá un bonus del 25% adicional, pero si ataca a cualquier otra, no tendrá bonificación.</p>
                             </div>
                         </div>
                     </div>
@@ -47,7 +47,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading text-center">Subasta</div>
                 <div class="panel-body text-responsive text-only">
-                    Información acerca de la subasta.
+                    <p>Información acerca de la subasta.</p>
                 </div>
             </div>
         </div>
